--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Upplifting News!</title>
+    <title>Uplifting News!</title>
     <link rel="icon" href="images/book.png" />
     <link rel="stylesheet" href="./style.css" />
     <link
