--- a/code/index.html
+++ b/code/index.html
@@ -52,7 +52,7 @@
         Here, though, are what we consider to be the best new synths of NAMM 2020:
       </p>
 
-      <h3>New synth's at NAMM:</h3>
+      <h3>New fabulous synth's:</h3>
 
       <section class="newscard">
 
