--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
     <label for="nav-toggle" class="nav-toggle-label">
       <span></span>
     </label>
-    <h2>Glo(Bal) news <img src="logo.png" alt=""></h2>
+    <h2><a href="#top">Glo(Bal) news</a><img src="logo.png" alt=""></h2>
   </header>
 
   <figure>
