--- a/code/index.html
+++ b/code/index.html
@@ -11,17 +11,60 @@
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
+    <nav>
+      <ul>
+        <li><a href="#">Meny1</a></li>
+        <li><a href="#">Meny2</a></li>
+        <li class="logo"><a href="#"><img src="#" alt="logo"></a></li>
+        <li><a href="#">Meny3</a></li>
+        <li><a href="#">Meny4</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
+    <figure>
+      <img src="#" alt="big news">
+    </figure>
+    <article>
+      <h1>Big news</h1>
+      <p>Big big news</p>
+    </article>
   </section>
 
-  <section class="">
+  <section class="news-card">
     <!-- The other news  -->
+    <article>
+      <h2>Small news 1</h2>
+      <img src="#" alt="news 1">
+    </article>
+    <article>
+      <h2>Small news 2</h2>
+      <img src="#" alt="news 2">
+    </article>
+    <article>
+      <h2>Small news 3</h2>
+      <img src="#" alt="news 3">
+    </article>
+    <article>
+      <h2>Small news 4</h2>
+      <img src="#" alt="news 4">
+    </article>
+    <article>
+      <h2>Small news 1</h2>
+      <img src="#" alt="news 1">
+    </article>
+    <article>
+      <h2>Small news 2</h2>
+      <img src="#" alt="news 2">
+    </article>
+    <article>
+      <h2>Small news 3</h2>
+      <img src="#" alt="news 3">
+    </article>
   </section>
 
-  <button>click</button>
 </body>
 
 </html>
