added links to news

--- a/code/index.html
+++ b/code/index.html
@@ -33,15 +33,18 @@
   <section class="big-news-section">
 
     <div class="big-news-img">
-      <img src="trump.jpg" class="trump" alt="Donald Trump from behind">
+      <a href="https://www.yogajournal.com/" target="_blank"> <img src="trump.jpg" class="trump"
+          alt="Donald Trump from behind">
     </div>
+    </a>
     <div class="big-news-text">
-
-      <h5>Breaking</h5>
-      <br>
-      <h2>Donald Trump: "Presidency is not for me"</h2>
-      <br>
-      <p>Donald Trump found his true self in a Buddhist temple and says he's leaving politics in order to...</p>
+      <a href="https://www.yogajournal.com/" target="_blank">
+        <h5>Breaking</h5>
+        <br>
+        <h2>Donald Trump: "Presidency is not for me"</h2>
+        <br>
+        <p>Donald Trump found his true self in a Buddhist temple and says he's leaving politics in order to...</p>
+      </a>
     </div>
 
   </section>
@@ -54,19 +57,23 @@
       </div>
       <div class="other-news-text">
         <h4>Is Corporate Mindfulness Training Just Zen Washing?</h4>
-        <p>A recent study that highlights the benefits of daily meditation practices in the workplace has people talking
+        <p>A recent study that highlights the benefits of daily meditation practices in the workplace has people
+          talking
           about the commercialization of mindfulness, and whether it ...</p>
       </div>
 
     </div>
     <div class="other-news">
+
       <div class="other-news-img">
         <img src="meditate.jpg" alt="a person meditating in front of lake">
       </div>
       <div class="other-news-text">
         <h4> Sadhguru On Why Meditation Doesn't Work For Everyone</h4>
-        <p> The moment we utter the word “meditation,” there are all kinds of misconceptions about it. First of all, the
+        <p> The moment we utter the word “meditation,” there are all kinds of misconceptions about it. First of all,
+          the
           English word “meditation” doesn’t mean anything in the sense, if you close your eyes...</p>
+
       </div>
 
     </div>
