--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>&#129299; Johannas news site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- link tag for social media icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header class="header" id="top">
+    <!-- Logo and navbar -->
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <img class="logo" src="logo.svg" alt="Technigo logo">
+    <nav class="menu">
+      <a href="https://www.bbc.com/news/world" target="_blank">NEWS</a>
+      <a href="https://hub.packtpub.com/category/programming/" target="_blank">TECH</a>
+      <a href="https://www.euronews.com/news/sport" target="_blank">SPORT</a>
+      <a href="https://www.sciencedaily.com/news/top/health/" target="_blank">HEALTH</a>
+      <button type="button" onclick="alert('You are not authorized!')">SIGN IN</button>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <img src="China coronavirus.png" alt="China coronavirus: Number of cases jumps as virus spreads to new cities">
+    <div>
+      <h2><a href="https://www.bbc.com/news/world-asia-china-51171035" target="_blank">China coronavirus: Number of
+          cases jumps as virus
+          spreads to new cities</a></h2>
+      <p><span>CHINA</span> Lorem ipsum sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+    </div>
+
+  </section>
+
+  <section class="other-news">
+    <!-- The other news  -->
+    <div class="other-news-child">
+      <img src="Deadly storm.png" alt="Big waves in ocean front">
+      <h3><a href="https://www.bbc.com/news/world-europe-51189589" target="_blank">Storm Gloria: Deadly squall batters
+          Spain, then shifts to France</a></h3>
+    </div>
+    <div class="other-news-child">
+      <img src="Picture of Kylian Mbappe.png" alt="Picture of Kylian Mbappe">
+      <h3><a href="https://www.bbc.com/sport/football/51184842" target="_blank">Liverpool are 'a machine' - Mbappe in
+          awe of Premier League leaders</a></h3>
+    </div>
+    <div class="other-news-child">
+      <img
+        src="https://images.unsplash.com/photo-1569025690938-a00729c9e1f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+        alt="Picture of someone working woth a computer">
+      <h3><a href="#" target="_blank">Heading other news</a></h3>
+    </div>
+    <div class="other-news-child">
+      <img
+        src="https://images.unsplash.com/photo-1577922784120-9802bd2683c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1348&q=80"
+        alt="A Straw-necked Ibis with four Australian White Ibises">
+      <h3><a href="#" target="_blank">Heading other news</a></h3>
+    </div>
+    <div class="other-news-child">
+      <img
+        src="https://images.unsplash.com/photo-1568552872166-6cb4b0feebab?ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80"
+        alt="Photo of a band performing">
+      <h3><a href="#" target="_blank">Heading other news</a></h3>
+    </div>
+    <div class="other-news-child">
+      <img
+        src="https://images.unsplash.com/photo-1578191290994-f02a85fee202?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjQ3MzMyfQ&auto=format&fit=crop&w=1008&q=80"
+        alt="Police, during #21N social protests in Colombia">
+      <h3><a href="#" target="_blank">Heading other news</a></h3>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-left">
+      <img class="logo" src="logo.svg" alt="Technigo logo">
+    </div>
+    <div class="footer-middle">
+      <p class="footer-text-desktop">Publisher: Johanna Olsen. About <a
+          href="https://www.linkedin.com/in/johanna-olsen-420699119/" target="_blank">Johanna</a></p>
+      <p class="footer-text-tablet"><a href="#top">Back to top</a></p>
+    </div>
+    <div class="footer-right">
+      <a href="https://sv-se.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.instagram.com/?hl=sv" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
