Add menu icon on mobile & apply flex styles to body

--- a/code/index.html
+++ b/code/index.html
@@ -16,13 +16,17 @@
       <img src="img/arctic_logo.svg" alt="logo">
     </a>
 
-    <h1 class="site-title">News about arctic stuff</h1>
+    <h1 class="site-title">~ News about arctic stuff</h1>
 
     <nav class="main-nav">
       <a href="#">Link</a>
       <a href="#">Link</a>
       <a href="#">Link</a>
     </nav>
+
+    <div class="nav-toggle">
+      <img src="img/menu.svg">
+    </div>
   </header>
 
   <main>
@@ -30,7 +34,9 @@
     <section class="featured-article">
       <div class="featured-article-img">
         <div class="ratio"></div>
-        <img src="https://cdn2.webdamdb.com/1280_1eosNM3S2l1e.jpg?1511390572" alt="">
+        <img
+          src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/neumayer_oli_2016258_lrg.jpg"
+          alt="">
       </div>
       <div class="featured-article-text">
         <h2>Featured big article</h2>
@@ -58,7 +64,9 @@
       <article class="article-item">
         <div class="article-img">
           <div class="ratio"></div>
-          <img src="https://quickbutik.imgix.net/7650K/products/5c44a5efa33e4.jpeg" alt="">
+          <img
+            src="https://capebreton.lokol.me/Content/Uploads/XV5PDES5VUCHAMQQRS2QRNDW6GAEQ6GX/Media/2/NASA_10Mar19.png"
+            alt="">
         </div>
         <div class="article-text">
           <h3>Another article</h3>
@@ -108,7 +116,9 @@
       <article class="article-item">
         <div class="article-img">
           <div class="ratio"></div>
-          <img src="https://quickbutik.imgix.net/7650K/products/5c44a5efa33e4.jpeg" alt="">
+          <img
+            src="https://capebreton.lokol.me/Content/Uploads/XV5PDES5VUCHAMQQRS2QRNDW6GAEQ6GX/Media/2/NASA_10Mar19.png"
+            alt="">
         </div>
         <div class="article-text">
           <h3>An article</h3>
