Uploading my project

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: Good stuff</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,900&display=swap" rel="stylesheet">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <img src="goodstuff-logo.svg" alt="goodstuff-logo">
+    <nav>
+      <a href="#">Cookies</a>
+      <a href="#">Food</a>
+      <a href="#">Cakes</a>
+      <a href="#">Bread</a>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <img src="images/scones_3.jpg" alt="scones image">
+    <div>
+      <p>RECEPIE OF THE WEEK</p>
+      <h2>Scones with cream cheese</h2>
+      <button type="button">Go bake</button>
+    </div>
+  </section>
+
+  <section class="small-news">
+
+    <a href="#" class="card chocolate">
+      <h2>Chocolate cookies</h2>
+    </a>
+
+    <a href="#" class="card breakfast">
+      <h2>breakfast tray</h2>
+    </a>
+
+    <a href="#" class="card wedding">
+      <h2>Wedding table</h2>
+    </a>
+
+    <a href="#" class="card daim">
+      <h2>Daim cheesecake</h2>
+    </a>
+
+    <a href="#" class="card cupcakes">
+      <h2>Chocolate cupcakes</h2>
+    </a>
+
+    <a href="#" class="card midsummer">
+      <h2>Midsummer cake</h2>
+    </a>
+
+    <a href="#" class="card lemon">
+      <h2>Lemon cake</h2>
+    </a>
+
+    <a href="#" class="card soup">
+      <h2>Soup</h2>
+    </a>
+
+  </section>
+  <footer>
+    <img src="goodstuff-logo.svg" alt="logo" class="footer-img">
+  </footer>
+</body>
+
 </html>
