--- a/code/index.html
+++ b/code/index.html
@@ -30,16 +30,26 @@
     <br>
     <br>
   </div>
-  
-  <section class="big-news small-news"> 
-    <div><img src="plane.JPG" alt="">
-    <a href="#">DREAM AWAY</a><h2>Lorem ipsum dolor sit amet.</h2>
-    <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum accusamus 
-      quos eveniet facere voluptates tempora, unde id architecto exercitationem 
-      ut aliquam laborum, asperiores, accusantium commodi minus nisi soluta 
-      expedita consequuntur.</p></div> -->
-  </section>
+  <section class="top-news">
+    
+      <div class="big-news"> 
+        <div><img src="plane.JPG" alt="">
+          <a href="#">DREAM AWAY</a><h2>Lorem ipsum dolor sit amet.</h2>
+          <img src="flowers.JPG" alt="">
+        </div>
+     </div>
 
+  <div class="column-news">
+    <!-- <div class> -->
+      <h2>Restaurants you'll have to try. We'll tell you where and how:</h2>
+      <img src="food1.JPG" alt="">
+      <img src="food2.JPG" alt="">
+      <img src="food3.JPG" alt="">
+      <img src="food4.JPG" alt="">
+      <a href="#">FOOD CRAVINGS</a>
+    <!-- </div>  -->
+  </div>
+</section>
     <section class="small-news">
       <div>
         <img src="usa.jpg" alt="Marocco">
