--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,127 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>The Compass</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
+<body>
+  <header class="navbar-container">
+    <img src="https://image.flaticon.com/icons/svg/1355/1355799.svg" alt="the compass logo" class="logo left-logo">
+    <h1>The Compass</h1>
+    <nav>
+      <a href="#">Maps</a>
+      <a href="#">Ships</a>
+      <img src="https://image.flaticon.com/icons/svg/1355/1355799.svg" alt="the compass logo" class="nav-logo, logo">
+      <a href="#">Treasure</a>
+      <a href="#">Rum</a>
+    </nav>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </header>
+
+  <section class="big-news">
+    <img
+      src="https://images.unsplash.com/photo-1527685609591-44b0aef2400b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1191&q=80"
+      alt="pirate ship">
+    <div>
+      <h2>All features of the new sloop</h2>
+      <p>Boatswain driver scourge of the seven seas long boat hornswaggle clap of thunder list swing the lead piracy.
+        Gally keelhaul warp run a rig gangplank spanker stern gabion American Main. Lee starboard holystone chase guns
+        Chain Shot run a rig booty hardtack chandler.</p>
+    </div>
+  </section>
+  </section>
+
+  <section class="small-news">
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1518065896235-a4c93e088e7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+          alt="pirate compass">
+        <h3>Best apps for navigation</h3>
+        <p>Run a rig chase guns crow's nest hempen halter Arr Sea Legs quarterdeck skysail code of conduct.</p>
+      </a>
     </section>
-  </body>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1415274878031-4078c05ea976?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
+          alt="pirate rum">
+        <h3>Top 10 best rum of the Carribean</h3>
+        <p>Bilge rat yawl marooned chase guns yo-ho-ho American Main bucko pirate Shiver me timbers.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1470506926202-05d3fca84c9a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" " alt="
+          treasure map">
+        <h3>Is this Mary Read's treasure map?</h3>
+        <p>un black spot bounty Brethren of the Coast lugsail hornswaggle knave quarterdeck bilge water.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" " alt="
+          pirate island">
+        <h3>Perfect tropical island for hiding</h3>
+        <p>Ahoy salmagundi Jack Ketch man-of-war bowsprit yawl barque run a rig haul wind.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1518065896235-a4c93e088e7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+          alt="pirate compass">
+        <h3>Best apps for navigation</h3>
+        <p>Run a rig chase guns crow's nest hempen halter Arr Sea Legs quarterdeck skysail code of conduct.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1415274878031-4078c05ea976?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
+          alt="pirate rum">
+        <h3>Top 10 best rum of the Carribean</h3>
+        <p>Bilge rat yawl marooned chase guns yo-ho-ho American Main bucko pirate Shiver me timbers.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1470506926202-05d3fca84c9a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" " alt="
+          treasure map">
+        <h3>Is this Mary Read's treasure map?</h3>
+        <p>un black spot bounty Brethren of the Coast lugsail hornswaggle knave quarterdeck bilge water.</p>
+      </a>
+    </section>
+    <section class="news-card">
+      <a href="#">
+        <img
+          src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80" " alt="
+          pirate island">
+        <h3>Perfect tropical island for hiding</h3>
+        <p>Ahoy salmagundi Jack Ketch man-of-war bowsprit yawl barque run a rig haul wind.</p>
+      </a>
+    </section>
+  </section>
+
+  <footer>
+    <h4> Emma Prené 2020</h4>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  </footer>
+
+</body>
+
 </html>
