Worked on making website more responsive

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
       <a href="#">
         <img class="glacier-img" src="/pics/Articles-pics/glacier.jpeg" alt="Glacier">
         <h1>Gardens of Branching Paths</h1>
-        <h4>Photographer Rhona-Lee Melendez delights with her unique point of view.</h4>
+        <h4>Photographer <span class="artist">Rhona-Lee Melendez</span> delights with her unique point of view.</h4>
       </a>
     </section>
 
