--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
   <article class="tiles">
     <a class="tile" href="url">
       <img
-        src="https://images.unsplash.com/photo-1490059830487-2f86fddb2b4b?ixlib=rb-1.2.1&auto=format&fit=crop&w=2900&q=80">
+        src="https://images.unsplash.com/photo-1568284439572-7194df6ece8a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80">
       <div class="details">
         <span class="title">Lorem Ipsum Dolor</span>
         <span class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -49,79 +49,81 @@
     <section class="grid">
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo
           consequat.</p>
       </section>
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
       </section>
 
       <section class="grid-group">
-        <h3>Header</h3>
+        <h2>Header</h2>
         <h4>Smaller header</h4>
         <img src="https://via.placeholder.com/350">
-        <hr>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
@@ -136,7 +138,7 @@
         <input id="email" type="email" id="email" placeholder="Email">
         <input id="subscribe" type="submit" value="Subscribe">
       </div>
-      <p>&copy <a href="url">Nathalie Rautell</a>, 2020</p>
+      <p>&copy <a target="_blank" href="https://www.linkedin.com/in/nathalierautell/">Nathalie Rautell</a>, 2020</p>
     </div>
   </footer>
 </body>
