Project-news-site

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:300,400|Oxygen&display=swap" rel="stylesheet">
+  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <section class="logo-name">
+      <img src="logo.svg" alt="logo">
+      <h2>Green menu</h2>
+    </section>
+    <nav>
+      <a href="#">DAGENS MENY</a>
+      <a href="#">FRUKOST</a>
+      <a href="#">SMOOTHIES</a>
+      <a href="#">MÅLTIDER</a>
+      <a href="#">NYHETER</a>
+    </nav>
+  </header>
+
+  <!-- The big news content -->
+  <a href="#" class="big-news-container">
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="Gks_xmas_2019-768x1148.jpg">
+      <div>
+        <h4>DAGENS MENY</h4>
+        <h1>Vegansk jul</h1>
+        <p>
+          Några favoriter är vår veganska Aubergine Polpette, vårt svamp & hasselnötbröd, Hasselbackpotatis med
+          grönkål
+          och pesto, pumpa, grönkål och bovete sallad, svart Quinoa & grönkålssallad från dinosauritiden, och denna
+          krispiga rödkål & druvsallad (rödkålsalater är obligatoriska för alla danska på jul).
+        </p>
+        <hr noshade>
+      </div>
     </section>
+  </a>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <!-- The other news  -->
+  <section>
+    <h5>NYA RECEPT</h5>
+    <div class="other-news">
+      <a href="#">
+        <img src="Watermelon_halloumi_salad_1 (1).jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="Beet_tartare_with_labneh_1.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="Kale_mushroom_tortilla_1.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="gks_love_shake_1.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="SwedishBreakfast_02-768x967.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="Spinach_feta_pie_1.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="Pea_falafel_bowl_1.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+      <a href="#">
+        <img src="Gks_xmas_2019-768x1148.jpg">
+        <h3>Recept rubrik</h3>
+        <p>Receptbla vfdfds vfdfdsfsd fsd</p>
+      </a>
+    </div>
+  </section>
+</body>
+
 </html>
