created img folder

--- a/code/index.html
+++ b/code/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Doggos Today</title>
+  <title>Doggos Today // Home</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 </head>
 
@@ -16,8 +16,9 @@
   <header>
   <div class="sidebar">
       <a class="active" href="https://www.instagram.com/doggosdoingthings" target="_blank">More</a>
-      <a class="active" href="https://www.linkedin.com/in/beatrice-lundevall-005737197" target="_blank">About</a>
-      <a class="active" href="https://www.instagram.com/mycorgi.allan" target="_blank">Contact</a>
+      <a class="active" href="https://www.linkedin.com/in/beatrice-lundevall-005737197" target="_blank">Contact</a>
+      <a class="active" href="https://www.instagram.com/mycorgi.allan" target="_blank">About</a>
+      <img src="img/favicon.png" alt="logo">
     </div>
 
     <h1>
@@ -29,9 +30,9 @@
 
 
   <section class="big-news">
-    <img src="allan.jpg" alt="Allan" class="headline">
+    <img src="img/allan.jpg" alt="Allan" class="headline">
     <section>
-      <h2>Most Popular Names of 2019</h2>
+      <a href="https://www.rover.com/blog/dog-names/"><h2>Most Popular Names of 2019</h2></a>
       <p>The shockers from last year and royal inspiration anyone? We got you! This list is filled with 
         newcomers and old favorites. Make sure your dog is trending! <br>
 
@@ -41,29 +42,33 @@
 
 
   <section class="flex-parent">
-      <div class="cutest"><h3>Puppies for President!</h3>
+      <div class="cutest">
+        <a href="https://www.buzzfeed.com/annaobriendvm/new-puppy-faq"><h3>Puppies for President!</h3></a>
         <p>Thinking of getting your own pupperino? Here's some pointers to help you get a new best friend!</p>
-      <img src="pupper.jpg" alt="Corgi"></div>
+      <img src="img/pupper.jpg" alt="Corgi"></div>
 
-      <div class="puppies"><h3>Cutest of them All?</h3> 
+      <div class="puppies">
+        <a href="https://www.akc.org/expert-advice/lifestyle/cute-puppies/"><h3>Cutest of them All?</h3> </a>
         <p>It's not a contest but we have for sure collected some of the most fab dogs out there.</p>
-      <img src="blackdog.jpg" alt="Doggo"></div>
+      <img src="img/blackdog.jpg" alt="Doggo"></div>
 
 
-      <div class="doing"><h3>Doggos Doing Things</h3>
+      <div class="doing">
+        <a href="https://www.goodhousekeeping.com/life/pets/g25560664/dog-memes/"><h3>Doggos Doing Things</h3></a>
         <p>Need a pick-me-up? Look at these dog memes and try not to LOL!</p>
-      <img src="doing.jpg" alt="Happy">
+      <img src="img/doing.jpg" alt="Happy">
       </div>
 
-      <div class="snow"><h3>Paws up - for snow</h3>
+      <div class="snow">
+        <a href="https://www.dogsnaturallymagazine.com/15-winter-care-tips-for-your-dog/"><h3>Paws up - for snow</h3></a>
         <p>Winter is coming - protect yourself and your pup from the cold with these tips!</p>
-      <img src="snowdoggo.jpg" alt="Snow"></div>
+      <img src="img/snowdoggo.jpg" alt="Snow"></div>
   </section>
 
-  <section div="search">
+  <section class="search">
     <form class="form" method="GET">
-        <label for="mail">Newsletter:</label><br>
-        <input div="textarea" type="text" name="title" placeholder="Your e-mail">
+        <label for="mail">To recieve newsletter:</label><br>
+        <input class="textarea" type="text" name="title" placeholder="Your e-mail">
         <button>Sign up</button>
     </form>
   </section>
