updated read me and cleaned up code

--- a/code/index.html
+++ b/code/index.html
@@ -26,13 +26,13 @@
 
   <section class="big-news">
     <img src="hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Image of glass containers">
-    <div class="big-news-text">
-      <a href="https://www.dn.se/" target="_blank">
+    <article class="big-news-text">
+      <a href="#" target="_blank">
         <h2>The biggest medical discoveries of 2019</h2>
       </a>
       <p>A lot happened within the medical field in 2019, we have the list with the 10 biggest medical breakthroughs.
       </p>
-    </div>
+    </article>
   </section>
 
   <section class="news">
